--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="stylesheet" href="../../../stylesheets/normalize.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
-        <link rel="stylesheet" href="../../../stylesheets/lib.css">
         <title>Finstagram</title>
+        <link rel="stylesheet" type="text/css" href="../../../stylesheets/normalize.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
+        <link rel="stylesheet" type="text/css" href="../../../stylesheets/lib.css">
+        <link rel="stylesheet" type="text/css" href="../../../stylesheets/app.css"
     </head>
+
     <body>
         <header> 
-            <h1>Lol</h1>
+            <h1>Finstagram</h1>
         </header>
         <main role="main">
             <article class="finstagram-post">
@@ -18,7 +20,7 @@
                     <h3>15 minutes ago</h3>
                 </div>
                 <a class="photo" href="#">
-                    <img src="https://i.pinimg.com/736x/cc/8a/3f/cc8a3f7ea6b5200369101816e06d6eb2.jpg" alt="post from Ei">
+                    <img src="https://i.pinimg.com/736x/cc/8a/3f/cc8a3f7ea6b5200369101816e06d6eb2.jpg" alt="finstagram post from Ei">
                 </a>
                 <div class="actions">
                     0 likes
@@ -32,6 +34,52 @@
                     </li>
                 </ul>
             </article>
+
+            <article class="finstagram-post">
+                <div class="user-info">
+                    <img src="https://tiermaker.com/images/media/template_images/2024/16187654/honkai-star-rail-nameless-honor-icons-16187654-3/j--fu-xuan---in-leisure.png" alt="Fu_Xuan">
+                    <h2>Fu_Xuan</h2>
+                    <h3>2 Hours ago</h3>
+                </div>
+                <a class="photo" href="#">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/051/237/794/large/kenny-chan-shibi-totoro-7.jpg?1656791284" alt="finstagram post from Fu_Xuan">
+                </a>
+                <div class="actions">
+                    439 likes
+                    <span class="comment-count">0 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            Fu_Xuan: Would you like to know your fortune?
+                        </p>
+                    </li>
+
+                </ul>
+            </article>
+
+            <article class="finstagram-post">
+                <div class="user-info">
+                    <img src="https://upload-os-bbs.hoyolab.com/upload/2024/07/03/124234939/cd637e94feba1ae8268e9f60b653974c_3365412906547484073.jpg?x-oss-process=image%2Fresize%2Cs_1000%2Fauto-orient%2C0%2Finterlace%2C1%2Fformat%2Cwebp%2Fquality%2Cq_70" alt="Firefly">
+                    <h2>Firefly</h2>
+                    <h3>4 hours ago</h3>
+                </div>
+                <a class="photo" href="#">
+                    <img src="https://preview.redd.it/high-quality-stelle-and-firefly-selfie-also-no-uid-v0-zidps4on1mjc1.png?auto=webp&s=c1c3786a0c504483b99b3e9f63da6581492f8905" alt="finstagram post from Firefly">
+                </a>
+                <div class="actions">
+                    4726 likes
+                    <span class="comment-count">5 comments</span>
+                </div>
+                <ul class="comments">
+                    <li>
+                        <p>
+                            Firefly: My day with Stelle :)
+                        </p>
+                    </li>
+                </ul>
+            </article>
+
         </main>
             
     </body>
