--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,7 @@
                 </a>
                 <div class="actions">
                     0 likes
-                    <span class="comment-count">0 comments</span>
+                    <span class="comment-count">1 comments</span>
                 </div>
                 <ul class="comments">
                     <li>
@@ -45,8 +45,8 @@
                     <img src="https://cdna.artstation.com/p/assets/images/images/051/237/794/large/kenny-chan-shibi-totoro-7.jpg?1656791284" alt="finstagram post from Fu_Xuan">
                 </a>
                 <div class="actions">
-                    439 likes
-                    <span class="comment-count">0 comments</span>
+                    0 likes
+                    <span class="comment-count">1 comments</span>
                 </div>
                 <ul class="comments">
                     <li>
@@ -69,7 +69,7 @@
                 </a>
                 <div class="actions">
                     4726 likes
-                    <span class="comment-count">5 comments</span>
+                    <span class="comment-count">1 comment</span>
                 </div>
                 <ul class="comments">
                     <li>
