--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,12 +1,3 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Finstagram</title>
-        <link rel="stylesheet" type="text/css" href="../../../stylesheets/normalize.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
-        <link rel="stylesheet" type="text/css" href="../../../stylesheets/lib.css">
-        <link rel="stylesheet" type="text/css" href="../../../stylesheets/app.css"
-    </head>
 
     <body>
         <header> 
@@ -15,21 +6,21 @@
         <main role="main">
             <article class="finstagram-post">
                 <div class="user-info">
-                    <img src="https://static.myfigurecollection.net/upload/items/1/1835651-56a48.jpg" alt="Ei">
-                    <h2>Ei</h2>
-                    <h3>15 minutes ago</h3>
+                    <img src="<%= @finstagram_post_Ei[:avatar_url] %>" alt="<%= @finstagram_post_Ei[:username] %>">
+                    <h2><%= @finstagram_post_Ei[:username] %></h2>
+                    <h3><%= @finstagram_post_Ei[:humanized_time_ago] %></h3>
                 </div>
                 <a class="photo" href="#">
-                    <img src="https://i.pinimg.com/736x/cc/8a/3f/cc8a3f7ea6b5200369101816e06d6eb2.jpg" alt="finstagram post from Ei">
+                    <img src= "<%= @finstagram_post_Ei[:photo_url] %>" alt="finstagram post from <%= @finstagram_post_Ei[:username] %>">
                 </a>
                 <div class="actions">
-                    0 likes
-                    <span class="comment-count">1 comments</span>
+                    <%= @finstagram_post_Ei[:like_count] %> likes
+                    <span class="comment-count"><%= @finstagram_post_Ei[:comment_count] %> comment</span>
                 </div>
                 <ul class="comments">
                     <li>
                         <p>
-                            Ei: Out for the long weekend...
+                            <%= @finstagram_post_Ei[:comments][0][:username] %>: <%= @finstagram_post_Ei[:comments][0][:text] %>
                         </p>
                     </li>
                 </ul>
